force-app/main/default/objects/pse__Vendor_Invoice_Item__c/pse__Vendor_Invoice_Item__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__VendorInvoiceItemHelp</customHelpPage>
    <description>The line item for a vendor invoice, calculated from the cost fields on timecards and milestones, and from reimbursement amounts on expenses.</description>
    <label>Vendor Invoice Item</label>
    <nameField>
        <displayFormat>INVITEM-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Invoice Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>