force-app/main/default/objects/pse__Vendor_Invoice_Item__c/fields/pse__Account_Currency__c.field-meta.xml
<CustomField>
    <fullName>pse__Account_Currency__c</fullName>
    <formula>TEXT(pse__Vendor_Invoice__r.pse__Account__r.CurrencyIsoCode)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Currency</label>
    <type>Text</type>
</CustomField>