force-app/main/default/objects/pse__Vendor_Invoice_Item__c/fields/pse__Quantity__c.field-meta.xml
<CustomField>
    <fullName>pse__Quantity__c</fullName>
    <label>Quantity</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>