force-app/main/default/objects/pse__Vendor_Invoice_Item__c/fields/pse__Timecard__c.field-meta.xml
<CustomField>
    <fullName>pse__Timecard__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Timecard</label>
    <referenceTo>pse__Timecard__c</referenceTo>
    <relationshipLabel>Vendor Invoice Items</relationshipLabel>
    <relationshipName>Vendor_Invoice_Items</relationshipName>
    <type>Lookup</type>
</CustomField>