force-app/main/default/objects/pse__Vendor_Invoice_Item__c/validationRules/pse__Budget_Check_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Budget_Check_Type</fullName>
    <active>true</active>
    <errorConditionFormula>AND(LEN(pse__Budget_Header__c)&gt;0,NOT(OR(ISPICKVAL(pse__Budget_Header__r.pse__Type__c,&apos;Vendor Purchase Order&apos;), ISPICKVAL(pse__Budget_Header__r.pse__Type__c,&apos;Vendor Purchase Order Change Order&apos;))))</errorConditionFormula>
    <errorDisplayField>pse__Budget_Header__c</errorDisplayField>
    <errorMessage>Invoice items may only be applied to Budget Headers with the type Vendor Purchase Order or Vendor Purchase Order Change Order</errorMessage>
</ValidationRule>